fix display collapse

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -143,3 +143,7 @@ a.tag-color {
        -o-transform: rotate(15deg);
           transform: rotate(15deg);
 }
+
+.width100 {
+  width: 100%;
+}
